--- a/resources/css/services.css
+++ b/resources/css/services.css
@@ -36,7 +36,7 @@ body {
 #container-filter-apartment {
     display: flex;
     justify-content: space-between;
-    margin-top: 1.25rem;
+    margin-top: 1.25vw;
 }
 
 #container-icon-and-search {
@@ -57,11 +57,11 @@ body {
 }
 
 #typeOfService {
-    height: 4.9vh;
-    width: 6.25rem;
+    height: 5vh;
+    width: 6vw;
     align-items: center;
-    /* padding-bottom: 2.5px; */
-    margin-left: 35px;
+    padding-top: 2.5px;
+    margin-left: 4.7vw;
 }
 
 #search-bar{
@@ -79,7 +79,7 @@ input:focus{
 #container-for-select-filter {
     display: flex;
     justify-content: space-around;
-    margin-right: 35px;
+    margin-right: 4.7vw;
 
 }
 
@@ -123,7 +123,7 @@ input:focus{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: -20px;
+    /* margin-top: 25px; */
 }
 
 #container-icons-details {
