--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -59,7 +59,7 @@ section{
 
 #button-for-search {
     border: none;
-    height: 40px;
+    height: 41px;
     width: 70px;
     color: aliceblue;
     background-color: rgb(197, 145, 0);
@@ -120,6 +120,11 @@ input:focus{
     font-weight: bold;
     width: 80%;
     margin: auto;
+}
+
+#singleItem {
+    text-decoration: none;
+    color: black;
 }
 
 figure {
@@ -216,7 +221,7 @@ figure {
 
 .image-realted-with-article {
     width: 100%;
-    height: 303px;
+    height: 43vh;
 }
 
 .container-of-text-and-info {
@@ -233,7 +238,7 @@ figure {
 }
 
 .container-of-text-and-info {
-    height: 203px;
+    height: 43vh;
 }
 
 .link-to-article:hover {
