--- a/resources/css/aqaba-city.css
+++ b/resources/css/aqaba-city.css
@@ -17,6 +17,20 @@ section{
     padding-top: 100px;
 }
 
+
+
+
+
+/*                  START HISTORY SECTION                          */
+/*                  START HISTORY SECTION                          */
+/*                  START HISTORY SECTION                          */
+/*                  START HISTORY SECTION                          */
+
+
+
+
+
+
 #about_us_title {
     text-align: center;
     font-weight: bold;
@@ -31,6 +45,26 @@ section{
     margin: auto;
     padding: 30px;
 }
+
+
+
+
+
+/*                  END HISTORY SECTION                            */
+/*                  END HISTORY SECTION                            */
+/*                  END HISTORY SECTION                            */
+/*                  END HISTORY SECTION                            */
+
+
+
+/*                  START ACTIVITIES SECTION                          */
+/*                  START ACTIVITIES SECTION                          */
+/*                  START ACTIVITIES SECTION                          */
+/*                  START ACTIVITIES SECTION                          */
+
+
+
+
 
 .title-of-section {
     font-family: 'Open Sans', sans-serif;
@@ -49,12 +83,8 @@ section{
     margin: auto;
 }
 
-.image-realted-with-article {
-    width: 100%;
-    height: 303px;
-}
-
 .container-of-text-and-info {
+    height: 19.75vw;
     display: grid;
     grid-template-columns: 1fr;
     padding: 50px;
@@ -68,12 +98,9 @@ section{
     color: rgb(255, 255, 255);
 }
 
-.container-of-text-and-info {
-    height: 19.75vw;
-}
-
-.container-image-and-text-hidden {
-    display: none;
+.image-realted-with-article {
+    width: 100%;
+    height: 303px;
 }
 
 .link-to-article {
@@ -98,6 +125,29 @@ section{
     transform: scale(1.08);
 }
 
+.container-image-and-text-hidden {
+    display: none;
+}
+
+
+
+
+/*                  END CONTACT FORM SECTION                            */
+/*                  END CONTACT FORM SECTION                            */
+/*                  END CONTACT FORM SECTION                            */
+/*                  END CONTACT FORM SECTION                            */
+
+
+
+/*                  START SCROLL UP BUTTON                           */
+/*                  START SCROLL UP BUTTON                           */
+/*                  START SCROLL UP BUTTON                           */
+/*                  START SCROLL UP BUTTON                           */
+
+
+
+
+
 .up {
     position: fixed;
     bottom: 100px;
@@ -120,6 +170,27 @@ section{
 .up.show {
     right: 35px;
 }
+
+
+
+
+
+
+
+/*                  END SCROLL UP BUTTON                           */
+/*                  END SCROLL UP BUTTON                           */
+/*                  END SCROLL UP BUTTON                           */
+/*                  END SCROLL UP BUTTON                           */
+
+
+
+/*                  START RESPONSIVE                           */
+/*                  START RESPONSIVE                           */
+/*                  START RESPONSIVE                           */
+/*                  START RESPONSIVE                           */
+
+
+
 
 
 
